--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
         <!-- Begin Home Section -->
         <div id="Home" class="tabcontent">
               <h2>Profile</h2>
-		<p><img class="img-style-1" src="assets/images/SydniCurrySmall.jpg">
-My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock.
- I have experience with several different programming languages such as C++, HTML, and SQL to name a few. 
-I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. 
-Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. </p>
+            
+		<p><img class="img-style-1" src="assets/images/SydniCurrySmall.jpg" width="113" height="162">
+            My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. </p>
               <br>&nbsp;
               <br>&nbsp;
               <br>&nbsp;
