--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
                         <span itemprop="postalCode">72204</span>  
                         <span itemprop="addressCountry">U.S.A.</span>
                     </span>
+            </div>
         </div>
 
         <div id="Accomplishments" class="tabcontent">
@@ -110,9 +111,21 @@ technical and non-technical colleagues at all levels in the organization.</li>
                 <li>Undertaking other duties not specifically stated which, from time to time, are necessary.</li>
             </ul>
         </div>
+    </div>
         <hr>
         <div id="CoverLetter" class="tabcontent">
             <h2>Letter of Introduction</h2>
+            <p> Dear sir or madam,</p>
+            <p>As a Senior at the University of Arkansas, I am constantly learning things about the Information
+            Science career path. Along with these skills, I have also learned business savvy skills such as customerservice, management, accounting, and much more. My educational and personal background aligns wellwith the qualifications you are seeking at your company. I am certain that I would make a valuable addition to your organization.</p>
+         <p>I am proficient in Microsoft Suites, and I am a very swift learner. I have experience with C++, Java, SQL, HTML, CSS, and JavaScript programming along with Project management.  I am currently taking classes that will improve my knowledge about developing, implementing, maintaining, and testing software applications. I do not have much work experience, but I have lots of volunteer experience from being a part of the Chancellor’s Leadership Scholarship Program, and I’m always open to learning a new skill.</p>
+            <p>I have a passion for helping others. I am extremely enthusiastic about USAble Life’s focus on providing customers with services and products that will better their lives. I have volunteered at many nonprofit organizations, so I know the joy that comes with making a difference in someone’s life. I would welcome the opportunity to contribute to your ongoing growth and success.</p>
+            <p>Thank you for your consideration and for your time. I look forward to the opportunity of speaking with
+                you soon.</p>
+            <p>Sydni Curry<br>
+            109 Ouachita 363 <br>
+            Camden,AR 71701<br>
+            smcurry@ualr.edu</p>
         </div>
         
         <div id="Contact" class="tabcontent">
