--- a/workexamples.html
+++ b/workexamples.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Your Title</title>
-    <meta name="description" content="Your Description">
+    <meta name="description" content="Writing Examples">
     <meta name="keywords" content="Your, Key, Words">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Sydni Curry">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="assets/style/studentportfolio.css">
+    <link rel="stylesheet" href="assets/style/studentporfolio.css">
 </head>
 
 <body>
@@ -27,9 +27,14 @@
 
         <div id="Writing" class="tabcontent">
               <h2>Writing Example 1</h2>
+            <h3>Proposal</h3>
+            <p>I have attached my Proposal for an apartment complex for the homeless <a href="assets/resources/Proposal.pdf"> </a>
+            </p>
+            
               <h2>Writing Example 2</h2>
+                
         </div>
-
+    </div>
         <div id="WebProject" class="tabcontent">
               <h2>Web Project 1</h2>
               <h2>Web Project 2</h2>
