--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div id="Home" class="tabcontent">
               <h2>Profile</h2>
 		<p>
-            <img class="img-style-1" src="assets/images/SydniCurrySmall.jpg" width="113" height="162">
+            <img class="img-style-1" src="assets/images/SydniCurrySmall.jpg" width="113" height="162" alt="SydniCurrySmall.jpg">
             My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. </p>
               <br>&nbsp;
               <br>&nbsp;
@@ -135,8 +135,9 @@ technical and non-technical colleagues at all levels in the organization.</li>
                 Email: <a href="mailto:smcurry@ualr.edu">smcurry@ualr.edu Us</a>  <br>
                 Address: 109 Ouachita 363, Camden, AR  71701
             </p>
-        </div>    
-</div>
-<script type="text/javascript" src="assets/scripts/index.js"></script>
+        </div> 
+    <body>
+<html>
+<script src="assets/scripts/index.js"></script>
 </body>
 </html>
