--- a/index.html
+++ b/index.html
@@ -132,12 +132,10 @@ technical and non-technical colleagues at all levels in the organization.</li>
             <h2>Contact Me</h2>
             <p>
                 Phone: (870)675-6555<br>
-                Email: <a href="mailto:smcurry@ualr.edu">smcurry@ualr.edu Us</a>  <br>
+                Email: <a href="mailto:smcurry@ualr.edu">smcurry@ualr.edu</a>  <br>
                 Address: 109 Ouachita 363, Camden, AR  71701
             </p>
         </div> 
-    <body>
-<html>
 <script src="assets/scripts/index.js"></script>
 </body>
 </html>
