--- a/workexamples.html
+++ b/workexamples.html
@@ -28,11 +28,12 @@
         <div id="Writing" class="tabcontent">
               <h2>Writing Example 1</h2>
             <h3>Proposal</h3>
-            <p>I have attached my Proposal for an apartment complex for the homeless <a href="assets/resources/Proposal.pdf"> </a>
+            <p>I have attached my Proposal for an apartment complex for the homeless: <a href="assets/resources/Proposal.pdf"> </a>
             </p>
             
               <h2>Writing Example 2</h2>
-                
+              <h3>BHAG Project</h3>
+            <p>I have attached my BHAG project from my Venture Management class: <a href="assets/resources/BHAG.pdf"></a></p>
         </div>
     </div>
         <div id="WebProject" class="tabcontent">
