--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               <h2>Profile</h2>
 		<p>
             <img class="img-style-1" src="assets/images/SydniCurrySmall.jpg" style="width:130px; height:155px; " alt="portfolio pic">
-            My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am also minoring in Innovation and ENtrepreneurship, so I have picked up a few business skills such as accounting, time management, and data entry.I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. I hope to learn a few more programming languages as well at more technical skills in the near future. </p>
+            My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am also minoring in Innovation and Entrepreneurship, so I have picked up a few business skills such as accounting, time management, and data entry.I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. I hope to learn a few more programming languages as well at more technical skills in the near future. </p>
               <br>&nbsp;
               <br>&nbsp;
               <br>&nbsp;
@@ -70,6 +70,7 @@
 
         <div id="Accomplishments" class="tabcontent">
             <h2>Accomplishments</h2>
+            <p>Named to UA Little Rock spring 2020 Dean's List</p>
         </div>        
         
         <!-- Begin Skills Section -->
