--- a/workexamples.html
+++ b/workexamples.html
@@ -27,13 +27,12 @@
 
         <div id="Writing" class="tabcontent">
               <h2>Writing Example 1</h2>
-            <h3>Proposal</h3>
-            <p>I have attached my Proposal for an apartment complex for the homeless: <a href="assets/resources/Proposal.pdf">Proposal</a>
-            </p>
+            <h3>Honesty Essay</h3>
+            <p>I have attached my essay about honesty from my management class.</p> <a href="assets/resources/Honesty%20Essay.pdf" target="_blank">Honesty Essay</a>
             
               <h2>Writing Example 2</h2>
               <h3>BHAG Project</h3>
-            <p>I have attached my BHAG project from my Venture Management class: <a href="assets/resources/BHAG.pdf">BHAG</a></p>
+            <p>I have attached my BHAG project from my Venture Management class</p> <a href="assets/resources/BHAG.pdf" target="_blank">BHAG</a>
         </div>
     </div>
         <div id="WebProject" class="tabcontent">
@@ -43,23 +42,30 @@
 
         <div id="Database" class="tabcontent">
               <h2>Database Project 1</h2>
+            <h3>Movie Rental Database</h3>
+            <p>I have attached my Movie Rental Database report down below.</p> <a href="assets/resources/project.pdf" target="_blank">Movie Rental Database Report</a>
               <h2>Database Project 2</h2>
         </div>
 
         <div id="Programming" class="tabcontent">
               <h2>Programming Project 1</h2>
+                <h3>Gradebook Program</h3>
+            <p>I have attached my c++ code for a gradebook for students. The gradebook also includes a curved section for grades to be curved.</p>
+            <button id="flip">Click to show or hide code</button><br>
+            <div id="panel"><script src="https://gist.github.com/Smcurry/006c6c95262b86778610ff73f4161dfb.js"></script></div>
               <h2>Programming Project 2</h2>
         </div>
 
         <div id="SoftSkills" class="tabcontent">
               <h2>Soft Skills Project 1</h2>
+            <p>I have attached my Proposal for an apartment complex for the homeless,</p> <a href="assets/resources/Proposal.pdf" target="_blank">Proposal</a> 
         </div>
 
         <div id="Capstone" class="tabcontent">
               <h2>Capstone Project</h2>
+            <p>Below is my Capstone Project Proposal</p> <a href="assets/resources/capstone%20project%20proposal%202020.pdf" target="_blank"> Capstone Proposal</a>
         </div>
-
-    </div>
+    
 <script type="text/javascript" src="assets/scripts/index.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 </body>
