--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="Resume" class="tabcontent">
             <h2>Resume</h2>
             <h3>Experience</h3>
-            <p>You are welcome to download my resume in either <a href="assets/resources/Sydni%20Resume%201.docx">Microsoft Word</a> or <a href="assets/resources/Sydni%20Resume%201.pdf">PDF</a> format.</p>
+            <p>You are welcome to download my resume in either <a href="assets/resources/Sydni_Resume.docx">Microsoft Word</a> or <a href="assets/resources/Sydni%20Resume%201.pdf">PDF</a> format.</p>
              <!-- Position #1 -->
             <div itemscope itemtype="http://schema.org/Organization">
             <h3><span itemprop="jobTitle">Technical Assistant 1</span></h3>
