--- a/workexamples.html
+++ b/workexamples.html
@@ -73,7 +73,7 @@
             <a href="assets/resources/Proposal.pdf" target="_blank">Proposal</a>
             <h2>Soft Skills Project 1</h2>
             <p>I have attached my Capstone Project charter below.</p>
-            <a href="assets/resources/Project%20Charter.pdf" target="_blank">Project Charter</a>
+            <a href="assets/resources/ProjectCharter.pdf" target="_blank">Project Charter</a>
         </div>
     
 
