--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
               <h2>Profile</h2>
 		<p>
             <img class="img-style-1" src="assets/images/SydniCurrySmall.jpg" style="width:130px; height:155px; " alt="portfolio pic">
-            My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am also minoring in Innovation and Entrepreneurship, so I have picked up a few business skills such as accounting, time management, and data entry.I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. I hope to learn a few more programming languages as well at more technical skills in the near future. </p>
+            My name is Sydni Curry and I am an Information Science student at the University of Arkansas at Little Rock. I have experience with several different programming languages such as C++, HTML, and SQL to name a few. I am also minoring in Innovation and Entrepreneurship, so I have picked up a few business skills such as accounting, time management, and data entry.I am currently a Technical Assistant at the University of Arkansas Cooperative Extension Service. Being an employee here has allowed me to develop new skills such as Web Accessibility and Web application programming, along with experience in technical support. I am in the process of learning Python and Django Framework. </p>
               <br>&nbsp;
               <br>&nbsp;
               <br>&nbsp;
+            <a href="https://www.linkedin.com/in/sydni-curry-5464241b0/">Linkedin Profile</a>
     </div>
 
         <!-- Begin Skills Section -->
@@ -45,11 +46,15 @@
 			<li> C++</li>
 			<li> Java</li>
 			<li> HTML5</li>
-			<li> Css</li>
+			<li> CSS</li>
 			<li> Javascript</li>
 			<li> SQL</li>
 			<li> Project Management</li>
 			<li> Web Accessibility</li>
+            <li>gitHub</li>
+            <li>Oracle/li>
+            <li>Figma</li>
+            <li>Visual Studios</li>
 		</ul>
         </div>
 
@@ -112,6 +117,35 @@ technical and non-technical colleagues at all levels in the organization.</li>
                 <li>Undertaking other duties not specifically stated which, from time to time, are necessary.</li>
             </ul>
         </div>
+
+            <!--- Position 2 --->
+                        <div itemscope itemtype="http://schema.org/Organization">
+            <h3><span itemprop="jobTitle">Group Leader</span></h3>
+            <h4>
+                <span itemprop="name">Children's International</span> - <span itemprop="url"><a href="https://ualr.edu/children/">www.ualr.edu/children</a></span><br>
+                <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+                    <span itemprop="streetAddress"> 2510 Fair Park Blvd</span>
+                    <span itemprop="addressLocality">Little Rock</span>,
+                    <span itemprop="addressRegion">AR</span>
+                    <span itemprop="postalCode">72204</span>
+                </span>
+            </h4>
+            <p class="time">June 2019 &#45; July 2019</p>
+            <p></p>
+                <p itemprop="description">
+                     Lead 20-25 students elementary and/or middle school students per assigned group through daily camp proceedings.</p>
+                <ul>
+                <li>Manage mealtime, recess, transition, as well as field trips.</li>
+                <li>Support instructors during skill-sessions in Theatre, Music, Scripts, Poetry, etc.,</li>
+                <li>Will be trained in camp processes, life-skills, and group facilitation.</li>
+                <li>Assist with program administrative duties such as collecting attendance and check-in/out process.</li>
+                <li>Support special program activities such as parent events and end-of-camp showcases, among others.</li>
+                <li>Act as a role model and mentor to children.</li>
+                <li>Supervise children in large and small groups and individually.</li>
+                <li>Be actively always engaged with students </li>
+                <li>Assist with State Office networking tasks as assigned.</li>
+            </ul>
+    </div>
     </div>
         <hr>
         <div id="CoverLetter" class="tabcontent">
