--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			<li> Project Management</li>
 			<li> Web Accessibility</li>
             <li>gitHub</li>
-            <li>Oracle/li>
+            <li>Oracle</li>
             <li>Figma</li>
             <li>Visual Studios</li>
 		</ul>
