--- a/workexamples.html
+++ b/workexamples.html
@@ -79,8 +79,8 @@
 
         <div id="Capstone" class="tabcontent">
               <h2>Capstone Project</h2>
-            <p>Below is my Capstone Project Proposal.</p> 
-            <a href="assets/resources/capstone%20project%20proposal%202020.pdf" target="_blank"> Capstone Proposal</a>
+            <p>Below is my Capstone 1 Evaluation.</p> 
+            <a href="assets/resources/Capstone%20Reflection.pdf" target="_blank"> Capstone 1 Evaluation</a>
         </div>
     
 <script type="text/javascript" src="assets/scripts/index.js"></script>
